# pgRPG

./: .gitignore  CLAUDE.md  README.md  config.json  init.py  old.txt  pyproject.toml  pyrpg.py  release_notes.md  requirements.txt  test.drawio  test.toml  todo.md
.github/workflows/: python-package.yml
assets/: generic.json  grey_key.json  item.json  key.json  keys.json  npc_merchant.json  quest01.json  red_key.json
assets/textures/: keys.json  tileset.json
docs/: ADR_001_multiplayer_architecture.md  CHANGELOG_ARCHITECTURE.md  console.md  quest.md  terminology.md  use_cases.pptx
docs/old/: HowToPrepareNewComponent.md  release_notes.md  test.drawio  todo.md  use_cases.pptx
example/: game.py
example_game/: config.jsonc  game.py
experiments/allow_deny_list/: allow_deny_list_filter.py
experiments/animated_background/: animated_background.py
experiments/assets/: assets_experiment.py  model.json  prototype_model.json  prototype_prototype_model.json  recursive_init_experiments.py
experiments/bitmap_font/: bitmap_font.py  red_gradient_capital_font.json  small_font.json  small_frame.json  test.py
experiments/bt/: bt.py  btree.py  chase_player.json  create_and_full_run.py  create_and_optimized_run.py  dict_utils.py  example.json  get_class_object.py  get_dict.py  get_dict_from_file.py  get_dict_params.py  patrol.json  str_utils.py  translate.py  yield.py
pgrpg/: __init__.py
pyrpg/: .gitignore  README.md  __init__.py  main.py  main_5ex.py  release_notes.md  requirements.txt  test.drawio  todo.md
tests/: assets_test.py  conftest.py  test_ecs.py
(+7526 files in other folders)
